apps/matrix/element.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: element
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: element
    app.kubernetes.io/part-of: matrix
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: element
      app.kubernetes.io/part-of: matrix
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: element
        app.kubernetes.io/part-of: matrix
    spec:
      containers:
        - name: element
          image: vectorim/element-web:latest
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: config
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: config
          configMap:
            name: element-config
      nodeSelector:
        kubernetes.io/hostname: pj
---
apiVersion: v1
kind: Service
metadata:
  name: element
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: element
    app.kubernetes.io/part-of: matrix
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: element
    app.kubernetes.io/part-of: matrix
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
