apps/matrix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: matrix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: matrix.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
    - host: matrix.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  number: 8008
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: element
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: matrix
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
    - host: element.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
    - host: element.pj-home-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: element
                port:
                  number: 80
